--- a/site/index.html
+++ b/site/index.html
@@ -17,9 +17,18 @@
           <li>
             <h3 class="white-text left-align">&nbsp DAO Dash<i class="medium material-icons yellow-text">trending_up</i></h3>
           </li>
-          <li><a href="#!" class="white-text"><i class="material-icons white-text">refresh</i>Refresh Data</a></li>
           <li>
-            <a href="#!" class="white-text"><i class="material-icons white-text">all_inclusive</i>Edit Dashboards</a></li>
+            <a href="#" data-target='refresh-dropdown' class="dropdown-trigger waves-effect waves-light white-text"><i class="material-icons white-text">refresh</i>Refresh Data</a>
+            <ul id='refresh-dropdown' class='dropdown-content black'>
+              <li><a href="#!" class='white-text'>All</a></li>
+              <li class="divider" tabindex="-1"></li>
+              <li><a href="#!" class='white-text'>Chart 1</a></li>
+              <li><a href="#!" class='white-text'>Chart 2</a></li>
+              <li><a href="#!" class='white-text'>Chart 3</a></li>
+              <li><a href="#!" class='white-text'>Chart 4</a></li>
+            </ul>
+          </li>
+          <li><a href="#!" class="waves-effect waves-light white-text"><i class="material-icons white-text">all_inclusive</i>Edit Dashboards<i class="material-icons white-text right">launch</i></a></li>
           <br>
           <br>
           <br>
@@ -60,7 +69,6 @@
           <br>
           <div class="row">
             <div class="col s6">
-              <!-- <div id="dashboard" class="section scrollspy"> -->
                 <div class="video-container">
                   <iframe src="https://www.youtube.com/embed/Q8TXgCzxEnw?rel=0" allowfullscreen="" width="853" height="480" frameborder="0"></iframe>
                 </div>
@@ -75,7 +83,6 @@
             </div>
             <div class="row">
               <div class="col s6">
-                <!-- <div id="dashboard" class="section scrollspy"> -->
                   <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/Q8TXgCzxEnw?rel=0" allowfullscreen="" width="853" height="480" frameborder="0"></iframe>
                   </div>
@@ -90,9 +97,8 @@
               </div>
           </div>
       </main>
-
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/sidenav.js"></script>
+      <script type="text/javascript" src="js/dropdown.js"></script>
     </body>
   </html>
