--- a/site/index.html
+++ b/site/index.html
@@ -15,66 +15,43 @@
       <header>
         <ul id="slide-out" class="sidenav sidenav-fixed black">
           <li>
-            <h3 class="white-text left-align">&nbsp DAO Dash<i class="medium material-icons yellow-text">trending_up</i></h3>
+            <a href="#"><i class="small logo material-icons yellow-text left-align">trending_up</i></a>
           </li>
+          <br>
           <li>
-            <a href="#" data-target='refresh-dropdown' class="dropdown-trigger waves-effect waves-light white-text"><i class="material-icons white-text">refresh</i>Refresh Data</a>
+            <a href="#" data-target='refresh-dropdown' class="dropdown-trigger waves-effect waves-light white-text"><i class="material-icons white-text">refresh</i></a>
             <ul id='refresh-dropdown' class='dropdown-content black'>
               <li><a href="#!" class='white-text'>All</a></li>
               <li class="divider" tabindex="-1"></li>
-              <li><a href="#!" class='white-text'>Chart 1</a></li>
-              <li><a href="#!" class='white-text'>Chart 2</a></li>
-              <li><a href="#!" class='white-text'>Chart 3</a></li>
-              <li><a href="#!" class='white-text'>Chart 4</a></li>
+              <li><a href="#!" class='white-text '>1</a></li>
+              <li><a href="#!" class='white-text'>2</a></li>
+              <li><a href="#!" class='white-text'>3</a></li>
+              <li><a href="#!" class='white-text'>4</a></li>
             </ul>
           </li>
           <li><a href="#!" class="waves-effect waves-light white-text"><i class="material-icons white-text">all_inclusive</i>Edit Dashboards<i class="material-icons white-text right">launch</i></a></li>
+          <li class="divider" tabindex="-1"></li>
           <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <li><a href="https://github.com/rnhttr/dao-dash" class="bottom white-text">Powered by DAO Dash</a></li>
+          <li><a href="#!" class="waves-effect waves-light white-text"><i class="material-icons white-text">info_outline</i>Edit Dashboards<i class="material-icons white-text right">launch</i></a></li>
         </ul>
+        <a href="https://github.com/rnhttr/dao-dash" class="white-text">Powered by DAO Dash</a>
         <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
       </header>
       <main>
         <div class="container">
-          <br>
-          <br>
-          <br>
-          <br>
           <div class="row">
-            <div class="col s6">
+            <div class="col s12">
+              <h1 class="center-align">DAO Dash</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m6">
                 <div class="video-container">
                   <iframe src="https://www.youtube.com/embed/Q8TXgCzxEnw?rel=0" allowfullscreen="" width="853" height="480" frameborder="0"></iframe>
                 </div>
                 <div class="caption center-align">Chart 1</div>
             </div>
-            <div class="col s6">
+            <div class="col s12 m6">
                 <div class="video-container">
                   <iframe src="https://www.youtube.com/embed/Q8TXgCzxEnw?rel=0" allowfullscreen="" width="853" height="480" frameborder="0"></iframe>
                 </div>
@@ -82,13 +59,13 @@
               </div>
             </div>
             <div class="row">
-              <div class="col s6">
+              <div class="col s12 m6">
                   <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/Q8TXgCzxEnw?rel=0" allowfullscreen="" width="853" height="480" frameborder="0"></iframe>
                   </div>
                   <div class="caption center-align">Chart 3</div>
               </div>
-              <div class="col s6">
+              <div class="col s12 m6">
                   <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/Q8TXgCzxEnw?rel=0" allowfullscreen="" width="853" height="480" frameborder="0"></iframe>
                   </div>
@@ -97,6 +74,9 @@
               </div>
           </div>
       </main>
+      <footer>
+
+      </footer>
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script type="text/javascript" src="js/dropdown.js"></script>
