--- a/site/index.html
+++ b/site/index.html
@@ -19,22 +19,15 @@
           </li>
           <br>
           <li>
-            <a href="#" data-target='refresh-dropdown' class="dropdown-trigger waves-effect waves-light white-text"><i class="material-icons white-text">refresh</i></a>
-            <ul id='refresh-dropdown' class='dropdown-content black'>
-              <li><a href="#!" class='white-text'>All</a></li>
-              <li class="divider" tabindex="-1"></li>
-              <li><a href="#!" class='white-text '>1</a></li>
-              <li><a href="#!" class='white-text'>2</a></li>
-              <li><a href="#!" class='white-text'>3</a></li>
-              <li><a href="#!" class='white-text'>4</a></li>
-            </ul>
+            <a href="#refresh-modal" class="modal-trigger waves-effect waves-light white-text"><i class="material-icons white-text">refresh</i></a>
           </li>
-          <li><a href="#!" class="waves-effect waves-light white-text"><i class="material-icons white-text">all_inclusive</i>Edit Dashboards<i class="material-icons white-text right">launch</i></a></li>
+          <li><a href="#!" class="waves-effect waves-light white-text"><i class="material-icons white-text">all_inclusive</i></a></li>
           <li class="divider" tabindex="-1"></li>
           <br>
-          <li><a href="#!" class="waves-effect waves-light white-text"><i class="material-icons white-text">info_outline</i>Edit Dashboards<i class="material-icons white-text right">launch</i></a></li>
+          <li>
+            <a href="#info-modal" class="modal-trigger waves-effect waves-light white-text"><i class="material-icons white-text">info_outline</i></a>
+          </li>
         </ul>
-        <a href="https://github.com/rnhttr/dao-dash" class="white-text">Powered by DAO Dash</a>
         <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
       </header>
       <main>
@@ -73,12 +66,45 @@
                 </div>
               </div>
           </div>
+          <div id='refresh-modal' class='modal'>
+            <div class="modal-content">
+              <h3 class="">Refresh</h3>
+              <p>Click a refresh icon below to pull fresh data using the Covalent API</p>
+              <ul class="collection">
+                <li class="collection-item">
+                  <div>All data<a onclick="M.toast({html: 'Refreshing all data...'})" href="#!" class="secondary-content"><i class="material-icons">refresh</i></a></div>
+                </li>
+                <li class="collection-item">
+                  <div>Chart 1<a href="#!" onclick="M.toast({html: 'Refreshing Chart 1...'})" class="secondary-content"><i class="material-icons">refresh</i></a></div>
+                </li>
+                <li class="collection-item">
+                  <div>Chart 2<a href="#!" onclick="M.toast({html: 'Refreshing Chart 2...'})" class="secondary-content"><i class="material-icons">refresh</i></a></div>
+                </li>
+                <li class="collection-item">
+                  <div>Chart 3<a href="#!" onclick="M.toast({html: 'Refreshing Chart 3...'})" class="secondary-content"><i class="material-icons">refresh</i></a></div>
+                </li>
+                <li class="collection-item">
+                  <div>Chart 4<a href="#!" onclick="M.toast({html: 'Refreshing Chart 4...'})" class="secondary-content"><i class="material-icons">refresh</i></a></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div id='info-modal' class='modal'>
+            <div class="modal-content">
+              <h2 class="">About</h2>
+              Click the refresh icon in the left-hand pane to pull fresh data or click the infinity sign to edit the dashboards in Superset.</p>
+            </div>
+            <div class="modal-footer">
+              <p class="left-align small">&nbsp; &nbsp; &nbsp;This dashboard is powered by <a href="https://github.com/rnhttr/dao-dash">DAO Dash</a>.</p>
+            </div>
+          </div>
       </main>
       <footer>
 
       </footer>
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
-      <script type="text/javascript" src="js/dropdown.js"></script>
+      <!-- <script type="text/javascript" src="js/dropdown.js"></script> -->
+      <script type="text/javascript" src="js/modal.js"></script>
     </body>
   </html>
